5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1708_3062.log
== TEST (2019-04-29 15:16:58) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
b="MACHADO"
c="MARRETA"
if(f==n*n):
-- ERROR:
File "XXXX", line 8
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:06) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
b="MACHADO"
c="MARRETA"
if(f==n*q):
-- ERROR:
File "XXXX", line 8
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:46) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
b="MACHADO"
c="MARRETA"
if(a==100):
	x=d*10
	print("ESPADA")
-- ERROR:
File "XXXX", line 8
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:21:38) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
b="MACHADO"
c="MARRETA"
if(a==100):
	x=d*10
	print("ESPADA")
elif(b==30):
	x=d+3
	print("MACHADO")
-- ERROR:
File "XXXX", line 8
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:49) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
if(a==100):
	x=d*10
	print(x)
elif(b==30):
	x=d+3
	print("MACHADO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(a==100):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:16) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
if(a==100):
	x=d*10
	print(x)
elif(b==30):
	x=d+3
	print("MACHADO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:28) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
a="ESPADA"
if(a==100):
	x=d*10
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:53) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=d*10
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:37) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=f+d*10
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:31) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=d+f+n*10
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:29:31) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=d+f+n*10
	print(x)


-- EXECUTION TIME:
0.122148
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:

-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:34) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=d+f+n*10
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:40) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==100):
	x=q+f*10
	print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif(b==30):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:33) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=n+f
if("ESPADA"==100)and(1 e 10):
	x=d*10
	print(x)
elif("MACHAD0"==30):
	x=d+3
	print(x)
elif("MARRETA"==50):
	x=d+5
	print(x)
else:

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==100)and(1 e 10):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:17) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==10)and(PO==100)
	x=d*10
	

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==10)and(PO==100)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:24) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==10)and(PO==100)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:29) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==10)and(PO==100)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:23) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1 e 10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==1 e 10)and(PO==100)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:30) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1 "e" 10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==1 "e" 10)and(PO==100)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:40) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==10)and(PO==100)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:12) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==f<10)and(PO==100)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==f<10)and(PO==100)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:21) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==f<10)
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==f<10)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:23) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==f<10):
	x=d*10
	print(x)

-- ERROR:
File "XXXX", line 5
    if("ESPADA"==f<10)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:31) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:40) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:50) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:46:59) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))

if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.151552
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:20) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=n+f
if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d=n+f
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:21) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q+f
if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:33) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q+f
if("ESPADA"==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:56) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q+f
if(q==1<f<10):
	x=d*10
	print(x)
elif("MACHADO"==1<f<10):
	x=d+3
	print(x)
elif("MARRETA"==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:27) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q+f
if(q==1<f<10):
	x=d*10
	print(x)
elif(q==1<f<10):
	x=d+3
	print(x)
elif(q==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:47) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(q==1<f<10):
	x=d*10
	print(x)
elif(q==1<f<10):
	x=d+3
	print(x)
elif(q==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:01) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(q==1<f<10):
	x=d*10
	print(x)
elif(q==1<f<10):
	x=d+3
	print(x)
elif(q==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:52) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(q=="ESPADA")and(q==1<f<10):
	x=d*10
	print(x)
elif(q==1<f<10):
	x=d+3
	print(x)
elif(q==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:22) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(1>f)or(f>10):
	print("Entrada invalida")
elif(q=="ESPADA")and(q==1<f<10):
	x=d*10
	print(x)
elif(q==1<f<10):
	x=d+3
	print(x)
elif(q==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:53) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(1>f)or(f>10):
	print("Entrada invalida")
elif(n=="ESPADA")and(q==1<f<10):
	x=d*10
	print(x)
elif(n=="MACHADO")and(q==1<f<10):
	x=d+3
	print(x)
elif(n=="MARRETA")and(n==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:54:45) 
-- CODE:
q=int(input("quantidade de pecas de ouro:"))
n=input("nome da arma:")
f=int(input("fator de sucesso:"))
d=q*f
if(1>f)or(f>10):
	print("Entrada invalida")
elif(n=="ESPADA")and(q==1<f<10):
	x=d*10
	print(x)
elif(n=="MACHADO")and(q==1<f<10):
	x=d+3
	print(x)
elif(n=="MARRETA")and(n==1<f<10):
	x=d+5
	print(x)
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.192901
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
